# Koto

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  Caddyfile  KOTO_PROTOCOL.md  LONG_TERM_STORAGE.md  MVP_CHECKLIST.md  Makefile  deploy-crypto.sh  docker-compose.prod.yml  docker-compose.yml  go.work  go.work.sum  package-lock.json  package.json  pnpm-lock.yaml
.cursor/: cursor-permissions.example.jsonc  sandbox.json
.cursor/agents/: backend-specialist.md  frontend-specialist.md  security-reviewer.md
.cursor/rules/: koto-agent-standards.mdc
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-design-system-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-chat-screen/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-RESEARCH.md
.planning/phases/03-conversation-list/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md
.planning/phases/04-navigation-system-integration/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md
.planning/phases/05-micro-interactions-haptics/: 05-01-PLAN.md  05-02-PLAN.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
android/: build.gradle.kts  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
apps/web-v2/: app.config.ts  biome.json  eslint.config.js  knip.json  package.json  tsconfig.json
crypto/: Cargo.toml  build.rs
crypto/src/: error.rs  lib.rs
desktop/: .gitignore  README.md  SECURITY.md  build.gradle.kts  gradle.properties  gradlew.bat  settings.gradle.kts
desktop/app/: build.gradle.kts
desktop/crypto/: build.gradle.kts
desktop/data/: build.gradle.kts
desktop/domain/: build.gradle.kts
desktop/gradle/: libs.versions.toml
desktop/ui/: build.gradle.kts
docs/: API_DESIGN.md  AUTH_FLOW.md  CACHING.md  CODESTYLE.md  CRATES.md  DATABASE.md  DATA_FLOWS.md  DEPLOYMENT.md  DISASTER_RECOVERY.md  EVENT_ARCHITECTURE.md  FRONTEND_ARCHITECTURE.md  GIT.md  INFRASTRUCTURE.md  SCALING.md  SECURITY.md  SERVICES.md  STACK.md
docs/services/: api.md  auth.md  gateway.md  guilds.md  media.md  messages.md  moderation.md  notifications.md  presence.md  search.md  users.md  voice.md
forks/: README.md
koto/: README.md
koto/desktop/: README.md  SESSION_PATTERNS.md  package-lock.json  package.json
koto/desktop/src-tauri/: Cargo.toml  tauri.conf.json
koto/desktop/src-tauri/icons/: icon.icns
koto/desktop/src-tauri/src/: auth.rs  chat_api.rs  config.rs  crypto.rs  koto_errors.rs  koto_ws.rs  lib.rs  profile.rs  sessions.rs
koto/desktop/src-tauri/src/transport/: commands.rs  direct.rs  doh.rs  manifest.rs  mod.rs  reality.rs  runtime.rs  sidecar.rs  tor.rs
pkg/errors/: errors.go  go.mod
pkg/logger/: go.mod  go.sum  logger.go
pkg/token/: go.mod  jwt.go
services/auth/: Dockerfile  go.mod  go.sum
services/bot/: Dockerfile  go.mod  go.sum
services/chat/: Dockerfile  go.mod
services/gateway/: Dockerfile  go.mod  go.sum
services/media/: Dockerfile  go.mod  go.sum
services/moderation/: Dockerfile  go.mod
services/notification/: Dockerfile  go.mod  go.sum
services/user/: Dockerfile  go.mod
tauri-koto/: DESKTOP_PORT.md  tsconfig.json  vite.config.js
tauri-koto/src/: main.tsx  vite-env.d.ts
tauri-koto/src-tauri/: Cargo.toml  tauri.conf.json
website/: .gitignore  DESIGN_BRIEF.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
website/src/: App.tsx  index.css  main.tsx
(+480 files in other folders)
