[package]
name    = "koto-crypto"
version = "0.1.0"
edition = "2021"

# cdylib  → .so for Android JNI (via uniffi)
# staticlib → .a for iOS (via uniffi)
# lib     → used by tests / other Rust crates
[lib]
name       = "koto_crypto"
crate-type = ["lib", "cdylib", "staticlib"]

# ── Signal Protocol (take Signal's implementation, wrap it for Koto) ──────────
# Using Signal's official Rust library as a git dependency.
# The workspace-inherited deps resolve correctly since Cargo 1.67.
[dependencies]
# Pinned so dependents (Tauri shell, Android Gradle) resolve the same API as `crypto/Cargo.lock`.
libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", package = "libsignal-protocol", rev = "8418be45dba3ebc17127b5c6b76ce02886350524" }
signal-crypto      = { git = "https://github.com/signalapp/libsignal.git", package = "signal-crypto", rev = "8418be45dba3ebc17127b5c6b76ce02886350524" }

# ── uniffi: generates Kotlin + Swift bindings from this Rust code ─────────────
# `cli` enables the uniffi_bindgen_main entry point used by src/bin/uniffi-bindgen.rs.
uniffi = { version = "0.28", features = ["tokio", "cli"] }

# ── Async runtime (libsignal-protocol's store traits are async) ───────────────
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

# ── Utilities ─────────────────────────────────────────────────────────────────
rand       = "0.9"
hex        = "0.4"
base64     = "0.22"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "1"
once_cell  = "1"
zeroize    = { version = "1.7", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }

# ── BIP39 seed-derived identity keys ─────────────────────────────────────────
# `bip39` is the rust-bitcoin canonical implementation (used by BDK, LDK).
# `hkdf` + `sha2` give us domain-separated key derivation from the 64-byte
# BIP39 seed: HKDF-SHA256 with info="koto/identity-key/v1".
bip39 = { version = "2.1", default-features = false, features = ["std"] }
hkdf  = "0.12"
sha2  = "0.10"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
