[package]
name = "tauri-koto"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_koto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# Второй запуск не открывает дубль окна — фокус на уже запущенном (см. v2.tauri.app/plugin/single-instance).
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "socks",
] }
tokio = { version = "1", features = ["sync", "macros", "rt", "time", "process", "net", "io-util"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2"
hex = "0.4"
base64 = "0.22"
bip39 = { version = "2.1", default-features = false, features = ["std"] }
rand = "0.8"
# Same Signal/libsignal stack as Android/desktop Kotlin — direct Rust calls (no JNI).
koto-crypto = { path = "../../../crypto" }
urlencoding = "2"
async-trait = "0.1"
thiserror = "1"
# Ed25519 verification of signed bridge-list manifest (updates.koto.run/bridges.json).
ed25519-dalek = "2"
# Locating xray/tor sidecar binaries on PATH.
which = "7"
# Capture libsignal's log::error! / log::warn! output (decrypt diagnostics).
env_logger = "0.11"
log = "0.4"
